<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dim_8dp"
    android:background="@drawable/shap_circl_rect_grey">
<ImageView
    android:id="@+id/item_cart_list_iv_image"
    android:layout_alignParentStart="true"
    android:layout_width="@dimen/dim_70dp"
    android:layout_height="@dimen/dim_80dp"
    android:layout_centerVertical="true"
    android:background="@drawable/shap_bt_sq"
   />
    <LinearLayout
        style="@style/margin_16dp"
        android:id="@+id/item_cart_list_ll_name"
        android:layout_toEndOf="@+id/item_cart_list_iv_image"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_cart_list_tv_name"
            android:textColor="@color/purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_18sp"/>
        <TextView
            android:id="@+id/item_cart_list_tv_cost"
            android:textColor="@color/purple"
            style="@style/margin_st_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_18sp"/>
    </LinearLayout>
    <LinearLayout
        style="@style/margin_st_end"
        android:id="@+id/item_cart_list_ll_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/item_cart_list_iv_image"

        android:layout_below="@+id/item_cart_list_ll_name"
        android:layout_marginTop="@dimen/dim_16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginEnd="@dimen/dim_32dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/item_cart_list_tv_increase"
            android:layout_width="@dimen/dim_32dp"
            android:layout_height="@dimen/dim_32dp"
            android:background="@drawable/shap_circle"
            android:contentDescription="@string/increase"
            android:gravity="center"
            android:text="@string/plus"
            android:clickable="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_cart_list_tv_quantity"
            style="@style/margin_st_end"
            android:layout_width="@dimen/dim_80dp"
            android:layout_height="@dimen/dim_20dp"
            android:background="@drawable/shap_circle"
            android:contentDescription="@string/quantity"
            android:gravity="center"
            android:text="@string/value"
            android:textColor="@color/purple" />

        <TextView
            android:id="@+id/item_cart_list_tv_decrease"
            android:layout_width="@dimen/dim_32dp"
            android:layout_height="@dimen/dim_32dp"
            android:background="@drawable/shap_circle"
            android:contentDescription="@string/decrease"
            android:gravity="center"
            android:text="@string/minus"
            android:clickable="true"
            android:textColor="@color/black" />

    </LinearLayout>
    <Button
        android:id="@+id/item_cart_list_bt_cancel"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dim_16dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:drawableTop="@drawable/ic_wrong"
        android:layout_width="@dimen/dim_32dp"
        android:layout_height="@dimen/dim_32dp"
        android:background="@drawable/shap_circle"/>
</RelativeLayout>