<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fragment_change_password_et_old_pass"
        style="@style/margin_st_end"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_70dp"
        android:layout_above="@+id/fragment_change_password_et_new_pass"
        android:layout_marginTop="@dimen/dim_40dp"
        android:background="@drawable/shap_circl_rect_grey"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dim_8dp"
        android:paddingEnd="@dimen/dim_8dp" />

    <EditText
        android:id="@+id/fragment_change_password_et_new_pass"

        style="@style/margin_st_end"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_70dp"
        android:layout_above="@+id/fragment_change_password_et_confirm_pass"
        android:layout_marginTop="@dimen/dim_24dp"
        android:background="@drawable/shap_circl_rect_grey"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dim_8dp"
        android:paddingEnd="@dimen/dim_8dp" />

    <EditText
        android:id="@+id/fragment_change_password_et_confirm_pass"

        style="@style/margin_st_end"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_70dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dim_24dp"
        android:background="@drawable/shap_circl_rect_grey"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dim_8dp"
        android:paddingEnd="@dimen/dim_8dp" />

    <Button
        android:id="@+id/fragment_change_password_bt_change"
        android:layout_width="@dimen/dim_200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_change_password_et_confirm_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_24dp"
        android:background="@drawable/shap_bt_rectangle"
        android:text="@string/change"
        android:textColor="@color/white" />
</RelativeLayout>