<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brooke_lark_unsplash"
    android:orientation="vertical">

    <TextView
        style="@style/margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50dp"
        android:layout_above="@+id/new_password_fragment_et_code"
        android:gravity="center"
        android:text="@string/please_enter_your_email"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/new_password_fragment_et_code"
        android:layout_above="@+id/new_password_fragment_tv"
        style="@style/margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50dp"
        android:layout_marginTop="@dimen/dim_50dp"
        android:background="@drawable/shap_circl_corner_rect"
        android:hint="@string/code"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/dim_16dp"
        android:paddingEnd="@dimen/dim_16dp"
        android:textColorHint="@color/grey" />
    <TextView
        android:id="@+id/new_password_fragment_tv"
        style="@style/margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50dp"
        android:layout_above="@+id/new_password_fragment_et_password"
        android:gravity="center"
        android:text="@string/please_enter_your_email"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/new_password_fragment_et_password"
        style="@style/margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shap_circl_corner_rect"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dim_16dp"
        android:paddingEnd="@dimen/dim_16dp"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/new_password_fragment_et_confirm_password"
        android:layout_below="@id/new_password_fragment_et_password"
        style="@style/margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50dp"
        android:background="@drawable/shap_circl_corner_rect"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dim_16dp"
        android:paddingEnd="@dimen/dim_16dp"
        android:textColorHint="@color/grey" />
    <Button
        android:id="@+id/new_password_fragment_bt_login"
        android:layout_width="@dimen/dim_200dp"
        android:layout_height="@dimen/dim_50dp"
        android:layout_below="@+id/new_password_fragment_et_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_50dp"
        android:background="@drawable/shap_bt_rectangle"
        android:text="@string/send"
        android:textColor="@color/white" />


</RelativeLayout>