<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brooke_lark_unsplash"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_fragment_ti_email"
        android:layout_marginBottom="@dimen/dim_70dp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_fragment_ti_email"
        style="@style/margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_fragment_ti_password"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_50dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="@dimen/dim_8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_fragment_ti_password"
        style="@style/margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dim_50dp"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_locked_"
            android:drawablePadding="@dimen/dim_8dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/login_fragment_tv_forget_password"
        style="@style/margin_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_fragment_ti_password"
        android:layout_alignParentEnd="true"
        android:text="@string/forget_password"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/login_fragment_bt_login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dim_50dp"
        android:layout_below="@+id/login_fragment_tv_forget_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_50dp"
        android:background="@drawable/shap_bt_rectangle"
        android:drawableStart="@drawable/ic_sign_in"
        android:gravity="center"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/login"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dim_8dp"
            android:layout_marginEnd="@dimen/dim_8dp"
            android:text="@string/don_t_have_account_press"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login_fragment_tv_here"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/here"
            android:textColor="@color/pink" />


    </LinearLayout>


</RelativeLayout>