<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@color/dark_white"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/category_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50dp"
        android:layout_marginTop="@dimen/dim_16dp"
        android:gravity="center"
        android:text="@string/category_picture"
        android:textColor="@color/purple"
        android:textSize="@dimen/font_20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/dialog_add_category_rl_image"
        android:layout_width="@dimen/album_dp_80"
        android:layout_height="@dimen/album_dp_80"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/dim_16dp"
        android:layout_marginTop="@dimen/dim_32dp"
        android:layout_marginEnd="@dimen/album_dp_4"
        android:background="@drawable/shap_circle"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dialog_add_category_ci_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>


    <EditText
        android:id="@+id/dialog_add_category_et_category_name"
        style="@style/margin_st_end"
        android:layout_width="@dimen/dim_250dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/dim_50dp"
        android:layout_marginTop="@dimen/dim_32dp"
        android:background="@drawable/shap_circl_corner_rect"
        android:hint="@string/category_name"
        android:paddingStart="@dimen/dim_16dp"
    />

    <Button
        android:id="@+id/dialog_add_category_bt_add"
        android:layout_width="@dimen/dim_100dp"
        android:layout_height="@dimen/dim_40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dim_32dp"
        android:layout_marginBottom="@dimen/dim_8dp"
        android:background="@drawable/shap_bt_rectangle"
        android:text="@string/add"
        android:textColor="@color/white" />


</LinearLayout>